ecmascript/parser/tests/test262-error-references/fail/0f512c4376a62de8.js.stderr
error: Expected Semi
 --> $DIR/tests/test262-parser/fail/0f512c4376a62de8.js:1:3
  |
1 | a enum;
  |   ^^^^

